# ai-usagebar

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  config.example.toml
.github/workflows/: release.yml
packaging/aur/: .SRCINFO  .SRCINFO-bin  PKGBUILD  PKGBUILD-bin
src/: active.rs  config.rs  lib.rs  usage.rs  vendor.rs
src/deepseek/: fetch.rs  mod.rs  types.rs  vendor.rs
src/openai/: vendor.rs
src/openrouter/: vendor.rs
src/tui/: app.rs  panels.rs  settings.rs  view.rs
src/widget/: cli.rs  render.rs  run.rs
src/zai/: vendor.rs
